tests/baselines/reference/jsxChildWrongFragment.errors.txt
index.tsx(7,28): error TS2322: Type '{ children: () => string; }' is not assignable to type '{ children?: ReactNode; }'.
  Types of property 'children' are incompatible.
    Type '() => string' is not assignable to type 'ReactNode'.
index.tsx(10,47): error TS2322: Type '() => string' is not assignable to type 'ReactNode'.


==== index.tsx (2 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    const test = () => "asd";
    
    // No Errors
    const jsxWithJsxFragment = <>{test}</>;
                               ~~
!!! error TS2322: Type '{ children: () => string; }' is not assignable to type '{ children?: ReactNode; }'.
!!! error TS2322:   Types of property 'children' are incompatible.
!!! error TS2322:     Type '() => string' is not assignable to type 'ReactNode'.
    
    // Type '() => string' is not assignable to type 'ReactNode'.
    const jsxWithReactFragment = <React.Fragment>{test}</React.Fragment>;
                                                  ~~~~
!!! error TS2322: Type '() => string' is not assignable to type 'ReactNode'.
!!! related TS6212 index.tsx:10:47: Did you mean to call this expression?
    